--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,47 @@
-Cython==0.29.13
-h5py==2.10.0
-joblib==1.2.0
-matplotlib==3.1.3
-numpy==1.18.1
-Pillow==8.3.2
-plyfile==0.7.2
-scipy==1.4.1
-tensorboardX==2.0
-torch==1.5.1
-tqdm==4.42.1
-trimesh==3.2.19
-scikit-learn==0.24.2
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+contourpy==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
+cycler==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
+cython==3.0.12 ; python_version >= "3.10" and python_version < "4.0"
+filelock==3.18.0 ; python_version >= "3.10" and python_version < "4.0"
+fonttools==4.56.0 ; python_version >= "3.10" and python_version < "4.0"
+fsspec==2025.3.2 ; python_version >= "3.10" and python_version < "4.0"
+h5py==3.13.0 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.6 ; python_version >= "3.10" and python_version < "4.0"
+joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
+kiwisolver==1.4.8 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
+matplotlib==3.10.1 ; python_version >= "3.10" and python_version < "4.0"
+mpmath==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+networkx==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
+numpy==2.2.4 ; python_version >= "3.10" and python_version < "4.0"
+nvidia-cublas-cu12==12.4.5.8 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-cupti-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-nvrtc-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cuda-runtime-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cudnn-cu12==9.1.0.70 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cufft-cu12==11.2.1.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-curand-cu12==10.3.5.147 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusolver-cu12==11.6.1.9 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusparse-cu12==12.3.1.170 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-cusparselt-cu12==0.6.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nccl-cu12==2.21.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nvjitlink-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+nvidia-nvtx-cu12==12.4.127 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
+pillow==11.1.0 ; python_version >= "3.10" and python_version < "4.0"
+plyfile==1.1 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==6.30.2 ; python_version >= "3.10" and python_version < "4.0"
+pyparsing==3.2.3 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
+scikit-learn==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
+scipy==1.15.2 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==78.1.0 ; python_version >= "3.12" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
+sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
+tensorboardx==2.6.2.2 ; python_version >= "3.10" and python_version < "4.0"
+threadpoolctl==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
+torch==2.6.0 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
+trimesh==4.6.6 ; python_version >= "3.10" and python_version < "4.0"
+triton==3.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.13.0 ; python_version >= "3.10" and python_version < "4.0"
